ajuste nas relaçoes das classes